# personal-portfolio

./: .gitignore  LICENSE  README.md  angular.json  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  jinja.yml
config/: about.toml  about.yml  blog.toml  blog.yml  competencies.toml  config.toml  contact.yml  doing.toml  navbar.yml  profile.yml  projects.toml  projects.yml  resume.toml  resume.yml  social.toml  softskills.toml  technologies.toml
jinja/: about.jinja  blog.jinja  contact.jinja  index.jinja  navbar.jinja  portfolio.jinja  resume.jinja  sidebar.jinja
public/: robots.txt
src/: index.html  styles.css
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/core/about/: about.component.css  about.component.html  about.component.ts  about.model.ts
src/app/core/blog/: blog.component.css  blog.component.html  blog.component.ts
src/app/core/contact/: contact.component.css  contact.component.html  contact.component.ts  contact.service.ts
src/app/core/portfolio/: portfolio.component.css  portfolio.component.html  portfolio.component.ts  portfolio.service.ts  project-item.model.ts
src/app/core/profile/: profile.component.css  profile.model.ts  (+3 more)
src/css/: style.css
src/data/: about.json  profile.json
src/environments/: environment.ts
src/jinja/: about.j2  about.jinja  blog.j2  contact.j2  index.j2  index.jinja  meta.j2  navbar.j2  navbar.jinja  projects.j2  resume.j2  resume.jinja  sidebar.j2  sidebar.jinja
(+102 files in other folders)
